@@ -112,7 +112,7 @@ using BUILD_NUMBER:   ${BuildNo}
    <!--                  Libraries                           -->
    <!-- ==================================================== -->
 
-   <target name="libs" depends="init,jar,scripts"/>
+   <target name="libs" depends="init,jar"/>
 
    <target name="jar" depends="init">
       <delete file="${lib}/jacorb.jar" failonerror="false"/>
@@ -267,92 +267,11 @@ using BUILD_NUMBER:   ${BuildNo}
       </jar>
    </target>
 
-   <target name="scripts" depends="init" description="Generate the scripts">
-        <macrodef name="jacorb-loadfile">
-            <attribute name="srcFile" />
-            <attribute name="property" />
-
-            <sequential>
-                <loadfile   srcFile="@{srcFile}"
-                            property="@{property}"
-                            failonerror="true" />
-            </sequential>
-        </macrodef>
-
-        <jacorb-loadfile
-                srcFile="bin/resolve_jacorb_home.tok"
-                property="token.resolve-jacorb-home" />
-
-        <jacorb-loadfile
-                srcFile="bin/resolve_java_cmd.tok"
-                property="token.resolve-java-cmd" />
-
-        <jacorb-loadfile
-                srcFile="bin/resolve_jaco_cmd.tok"
-                property="token.resolve-jaco-cmd" />
-
-        <copy todir="bin" overwrite="true">
-            <fileset dir="bin">
-                <include name="*.tpl"/>
-            </fileset>
-
-            <globmapper from="*.tpl" to="*"/>
-
-            <filterset>
-                <filter token="JACORB_BOOTCLASSPATH"
-                        value="-Djava.endorsed.dirs=&quot;${JACORB_HOME}/lib&quot;" />
-                <filter token="RESOLVE_JACORB_HOME"
-                        value="${token.resolve-jacorb-home}" />
-                <filter token="RESOLVE_JAVA_CMD"
-                        value="${token.resolve-java-cmd}" />
-                <filter token="RESOLVE_JACO_CMD"
-                        value="${token.resolve-jaco-cmd}" />
-                <filter token="JAVA_CMD" value="${jvm-name}" />
-                <filter token="JACORB_HOME"
-                        value="${basedir}" />
-                <filter token="DONT_EDIT"
-                        value="don't edit this file. edit the template instead" />
-            </filterset>
-        </copy>
-
-      <condition property="eol" value="crlf">
-         <or>
-            <os family="windows"/>
-            <os family="dos"/>
-         </or>
-      </condition>
-
-      <!-- shell scripts should always be set to LF -->
-      <property name="eol" value="lf" />
-
-      <fixcrlf srcDir="bin"
-               includes="*"
-               excludes="*.exe,*.conf,*template*"
-               eol="${eol}" />
-
-      <chmod perm="ugo+rx">
-         <fileset dir="bin">
-            <include name="*" />
-            <exclude name="*.bat" />
-            <exclude name="*.exe" />
-            <exclude name="*.conf" />
-            <exclude name="*template*" />
-         </fileset>
-      </chmod>
-   </target>
-
-
    <!-- ==================================================== -->
    <!--                   clean up                           -->
    <!-- ==================================================== -->
 
-    <target name="clean" depends="init" description="Clean the checkout">
-        <delete file="${basedir}/bin/idl"/>
-        <delete file="${basedir}/bin/idl.bat"/>
-        <delete file="${basedir}/bin/jaco"/>
-        <delete file="${basedir}/bin/jaco.bat"/>
-        <delete file="${basedir}/bin/ntfy-wrapper" />
-        <delete file="${basedir}/bin/ns-wrapper" />
+    <target name="clean" depends="init,src-check" description="Clean the checkout">
         <delete failonerror="false" includeemptydirs="true">
             <fileset dir="${classdir}" includes="**/*" />
         </delete>
@@ -377,7 +296,7 @@ using BUILD_NUMBER:   ${BuildNo}
    <!--                  API documentation                   -->
    <!-- ==================================================== -->
 
-   <target name="doc" depends="init" description="Create the Javadoc">
+   <target name="doc" depends="init,src-check" description="Create the Javadoc">
         <property name="PKGNAMES" value="org.jacorb.idl.*,org.jacorb.util.*,org.jacorb.orb.*,org.jacorb.imr.*,org.jacorb.ir.*,org.jacorb.poa.*,org.jacorb.events.*,org.jacorb.naming.*,org.jacorb.security.sas.*,org.omg.*,org.jacorb.notification.*" />
         <property name="PKGNAMES_EXCLUDED" value="org.jacorb.notification.filter.bsh" />
         <property name="SRCDIR2" value="" />
